# ssh-router

./: .gitignore  Cargo.toml  README.md  SshRouter.cs  SshRouter.csproj  build.cmd  build.sh  fix-sshd.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: log.rs  main.rs  routing.rs  temp.rs  win32.rs  wsl.rs
crates/cli/tests/: log_safety.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
docs/superpowers/plans/: 2026-07-13-tauri-router-gui.md  2026-07-14-cli-bundle-and-install.md
docs/superpowers/specs/: 2026-07-13-tauri-router-gui-design.md  2026-07-14-cli-bundle-and-install-design.md  2026-07-14-cli-temp-file-safety-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_sync.rs  commands.rs  elevate.rs  lib.rs  main.rs
src/components/: CliSyncDialog.tsx  QuickActions.tsx  RouteDialog.tsx  RouteTable.tsx  SftpField.tsx  StatusPanel.tsx  UpdateDialog.tsx  UpdatePanel.tsx
src/lib/: api.ts  tauri-update-adapter.test.ts  tauri-update-adapter.ts  update-manager.test.tsx  update-manager.ts
