[package]
name = "ssh-router"
version = "0.0.8"
edition = "2021"

[lib]
name = "ssh_router_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ssh-router-config = { path = "../crates/config" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
